--- a/HCPBridgeESP32/esphome.yaml
+++ b/HCPBridgeESP32/esphome.yaml
@@ -26,7 +26,7 @@ esphome:
     # board_build.f_flash: 40000000L
 
 external_components:
-    source: github://14yannick/esphome-hcpbridge@rc
+    source: github://14yannick/esphome-hcpbridge
     refresh: 0s
 
 esp32:
