--- a/esphome.yaml
+++ b/esphome.yaml
@@ -29,7 +29,7 @@ esphome:
     # board_build.f_flash: 40000000L
 
 external_components:
-    source: github://14yannick/esphome-hcpbridge
+    source: github://Tysonpower/esphome-hcpbridge
     refresh: 0s
 
 esp32:
@@ -162,6 +162,7 @@ api:
 
 web_server:
   port: 80
+  version: 3
   auth:
     username: !secret web_username
     password: !secret web_password
